--- a/sudoku.css
+++ b/sudoku.css
@@ -24,7 +24,8 @@ body {
 }
 
 #page {
-  width: 500px;
+  width: 100%;
+  max-width: 500px;
   height: auto;
   display: flex;
   flex: 1 1 auto;
@@ -35,18 +36,16 @@ body {
 
 
 #board {
-
   width: 100%;
   height: 500px;
-
+  max-height: 70vh;
   place-items: center;
-
   padding-bottom: 10px;
-
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
 }
+
 
 #thirds {
   width: 100%;
