--- a/sudoku.css
+++ b/sudoku.css
@@ -272,7 +272,7 @@ body {
   }
 
   #board {
-    height: 300px;
+    height: 450px;
     max-height: none;
   }
 
@@ -286,7 +286,7 @@ body {
 
   .choice,
   .delete {
-    font-size: 20px;
+    font-size: 18px;
   }
 
   .status {
@@ -300,7 +300,7 @@ body {
 
   #buttons {
     width: 100%;
-    max-width: 400px;
+    max-width: none;
     height: 60px;
     font-size: 12px;
   }
