--- a/sudoku.css
+++ b/sudoku.css
@@ -289,18 +289,19 @@ body {
   }
 
   .status {
+    margin-top: 0px;
     font-size: 16px;
   }
 
   #digits {
-    height: 40px;
+    height: 30px;
   }
 
   #buttons {
     width: 100%;
     max-width: none;
     height: 60px;
-    font-size: 12px;
+    font-size: 9px;
   }
 }
 
